Update 'nkg9mzblg-go' component image to: quay.io/rhtap_qe/rhtap-qe:5e6349cf4d1a7cfb115b7f855746239954889b37@sha256:ff4f132664e539adbfd40dca0a42fcf4b4b3c20bfac7fa2f33283db39c07c639

--- a/components/nkg9mzblg-go/overlays/development/deployment-patch.yaml
+++ b/components/nkg9mzblg-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nkg9mzblg-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:5e6349cf4d1a7cfb115b7f855746239954889b37@sha256:ff4f132664e539adbfd40dca0a42fcf4b4b3c20bfac7fa2f33283db39c07c639
+          name: container-image
